--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       <button class="todo-button" type="submit">
           <i class="fas fa-plus-square"></i>
       </button>
-
+      <div class="select">
+          <select name="todos" class="filter-todo" onchange="filterTodo(this)">
+              <option value="all">All</option>
+              <option value="Completed">Completed</option>
+              <option value="Uncompleted">Uncompleted</option>
+          </select>
+      </div>
 </form>
 
 <div class="todo-container">
